# Personal-AI-Data-Analyst

./: .env  .gitignore  Dockerfile  Makefile  PROJECT_WORKFLOW.md  README.md  app.py  check_api.py  implementation_plan.md  pyproject.toml
app/: main.py
app/analytics/: pandas_analyzer.py
app/llm/: gemini_client.py
data/: sample_data.csv
frontend/: streamlit_app.py
src/ai_data_analyst/: __init__.py  analyzer.py  config.py  data_loader.py  main.py  main_enhanced.py  visualizer.py
src/ai_data_analyst/chains/: __init__.py  analyst_chain.py  enhanced_analyst_chain.py
src/data_analysis/: analyst.py  config.py  vision.py
src/data_analysis/agent/: __init__.py  factory.py
src/data_analysis/agents/: __init__.py  data_cleaner.py  query_answerer.py  stats_analyst.py  supervisor.py  visualizer.py
src/data_analysis/graph/: __init__.py  state.py  workflow.py
src/data_analysis/memory/: __init__.py
src/data_analysis/tools/: __init__.py
src/data_analysis/utils/: __init__.py  api_key_validator.py
src/utils/: plot_utils.py
static/: style.css
templates/: index.html
tests/: demo_enhanced_features.py  test_agent.py  test_analyst.py  test_enhanced_analyst.py  test_workflow.py
