[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "data-analysis"
version = "0.1.0"
description = "Personal AI Data Analyst - Automate data analysis with LLMs"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.1.0",
    "langchain-google-genai>=0.0.1",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "ollama>=0.6.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "scipy>=1.16.3",
    "streamlit>=1.51.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/data_analysis"]
